Updating localizated files.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7181 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/webaccess/iFolderWeb.de.resx
+++ b/src/webaccess/iFolderWeb.de.resx
@@ -185,7 +185,7 @@
     <value>Ordnername:</value>
   </data>
   <data name="CHINESE-SIMPLIFIED">
-    <value>tChinesisch vereinfacht</value>
+    <value>Chinesisch vereinfacht</value>
   </data>
   <data name="MEMBER">
     <value>Mitglied</value>
