Tool tip in History page is not localized
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7188 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/webaccess/iFolderWeb.resx
+++ b/src/webaccess/iFolderWeb.resx
@@ -717,13 +717,19 @@
     <data name="SAMEOLDPASSWORD">
         <value>Old Password and New Password should not be same.</value>
     </data>
-	<data name="RETURN">
-		<value>Return</value>
-	</data>
-	<data name="HYPHEN">
-		<value> - </value>
-	</data>
-	<data name="NOITEMSAVAILABLE">
-		<value>No {0} available</value>
-	</data>
+    <data name="RETURN">
+	<value>Return</value>
+    </data>
+    <data name="HYPHEN">
+	<value> - </value>
+    </data>
+    <data name="NOITEMSAVAILABLE">
+	<value>No {0} available</value>
+    </data>
+    <data name="FILE">
+	<value>File</value>
+    </data>
+    <data name="DIRECTORY">
+        <value>Directory</value>
+    </data>
 </root>
