Added 4 strings to iFolderAdmin.resx.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7189 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/iFolderAdmin.resx
+++ b/src/admin/iFolderAdmin.resx
@@ -1261,4 +1261,16 @@
     <data name="SAVETO">
         <value>Save to</value>
     </data>
+    <data name="NOTAPPLICABLE">
+        <value>N/A</value>
+    </data>
+    <data name="ONLINE">
+        <value>Online</value>
+    </data>
+    <data name="OFFLINE">
+        <value>Offline</value>
+    <data name="WAITING">
+        <value>Waiting</value>
+    </data>
+    </data>
 </root>
