Exception is thrown when revoking past sharing and slave is down
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7196 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/iFolderAdmin.resx
+++ b/src/admin/iFolderAdmin.resx
@@ -582,6 +582,9 @@
 	<data name="LOGINCONNECTFAILED">
 		<value>Unable to connect to the iFolder server.</value>
 	</data>
+	<data name="REVERTSHARINGCONNECTFAILED">
+                <value>Unable to connect to the iFolder server. Revoke sharing once the server is reachable.</value>
+        </data>
 	<data name="LOGINCOPYRIGHT">
 		<value>&amp;copy; Copyright 2008 Novell, Inc. All rights reserved.</value>
 	</data>
